deployments/kubernetes/listingkit-workbench/base/traefik-basic-auth-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: listingkit-workbench-basic-auth
spec:
  basicAuth:
    secret: listingkit-workbench-basic-auth
